Fix positioning of fixed and absolute positioned blocks with auto left or top.  Bug 126213, r=dbaron, sr=attinasi